force-app/main/default/objects/QEC_Rule_Guidelines__c/QEC_Rule_Guidelines__c.object-meta.xml
<CustomObject>
    <label>QEC Rule Guidelines</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Guideline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QEC Rule Guidelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>