force-app/main/default/objects/QEC_Rule_Guidelines__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTODEAL</fullName>
            </value>
            <value>
                <fullName>SUBVENTION</fullName>
            </value>
            <value>
                <fullName>DOMESTIC</fullName>
            </value>
            <value>
                <fullName>INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>NETFARE</fullName>
                <isActive>false</isActive>
                <label>NETFARE</label>
            </value>
            <value>
                <fullName>PRIVATEFARE</fullName>
                <isActive>false</isActive>
                <label>PRIVATEFARE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>