force-app/main/default/objects/QEC_Rule_Guidelines__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONSOLIDATOR</fullName>
            </value>
            <value>
                <fullName>CORPORATE</fullName>
            </value>
            <value>
                <fullName>ENTERTAINMENT</fullName>
            </value>
            <value>
                <fullName>FLYCRUISE</fullName>
            </value>
            <value>
                <fullName>GROUP</fullName>
            </value>
            <value>
                <fullName>GROUPS-ADHOC</fullName>
            </value>
            <value>
                <fullName>GROUPS-SERIES</fullName>
            </value>
            <value>
                <fullName>INDUSTRY</fullName>
            </value>
            <value>
                <fullName>INTERNET</fullName>
            </value>
            <value>
                <fullName>RETAIL(AUSTRALIA)</fullName>
            </value>
            <value>
                <fullName>RETAIL(RESTOFWORLD)</fullName>
            </value>
            <value>
                <fullName>SEAMAN</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>STUDENT</fullName>
            </value>
            <value>
                <fullName>VFR</fullName>
            </value>
            <value>
                <fullName>WHOLESALE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>