force-app/main/default/objects/QEC_Rule_Guidelines__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>